--- a/.gitignore
+++ b/.gitignore
@@ -1,49 +1,41 @@
-# Python
-__pycache__/
-*.py[cod]
-*$py.class
-*.so
-*.egg-info/
-dist/
-build/
-*.egg
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# Virtual environments
-venv/
-.venv/
-env/
+# dependencies
+/node_modules
+/.pnp
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/versions
 
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
+# testing
+/coverage
 
-# Environment variables
-.env
-.env.local
-.env.*.local
+# next.js
+/.next/
+/out/
 
-# Jupyter
-.ipynb_checkpoints/
+# production
+/build
 
-# Data files (large)
-*.csv
-*.parquet
-*.h5
-*.hdf5
-!data/.gitkeep
-
-# OS
+# misc
 .DS_Store
-Thumbs.db
-
-# Logs
-*.log
-logs/
-
-# Secrets
 *.pem
-*.key
-secrets/
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# env files (can opt-in for committing if needed)
+.env*
+
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
